[package]
name = "example"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[dependencies]
prost-yat = { path = ".." }
bytes = "0.4.11"
prost-derive = "0.4.0"
prost = "0.4.0"

[build-dependencies]
prost-yat-build = { path = "../prost-yat-build" }
prost-build = "0.4.0"
