[package]
name = "example"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[dependencies]
prost-yat = { path = ".." }
bytes = "0.4.11"
prost-derive = "0.4.0"
prost = "0.4.0"
hyper = "0.12.20"
futures = "0.1.25"
serde_json = "1.0.34"
serde_derive = "1.0.84"
serde = "1.0.84"

[build-dependencies]
prost-yat-build = { path = "../prost-yat-build" }
prost-build = "0.4.0"
